[package]
name = "plictro"
version = "0.1.0"
authors = ["Dimitris Zervas <dzervas@noc.grnet.gr>"]
edition = "2018"

[dependencies]
cortex-m = { version = "*", features = ["const-fn"] }
cortex-m-rt = "*"
embedded-hal = "*"
embedded-graphics = "*"
nb = "*"
nrf52840-hal = "*"
# nrf52840-hal = { git = "https://github.com/japaric/nrf-hal", branch = "usb-device" }
# panic-semihosting = "*"
# rubble = { git = "https://github.com/jonas-schievink/rubble" }
# rubble-nrf5x = { git = "https://github.com/jonas-schievink/rubble", features = ["52840"] }
rubble = { version = "*", features = ["log"] }
rubble-nrf5x = { version = "*", features = ["52840"] }

[dev-dependencies]
cortex-m-semihosting = "*"
panic-halt = "*"

[features]
default = ["rt"]
rt = ["nrf52840-hal/rt"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"

[patch.crates-io.rubble]
path = "../rubble/rubble"

[patch.crates-io.rubble-nrf5x]
path = "../rubble/rubble-nrf5x"
